# open303

./: CMakeLists.txt  ReadMe.md
Resource/: Info.plist  editor.uidesc  win32resource.rc
Source/DSPCode/: GlobalDefinitions.h  GlobalFunctions.h  rosic_AcidPattern.cpp  rosic_AcidPattern.h  rosic_AcidSequencer.cpp  rosic_AcidSequencer.h  rosic_MipMappedWaveTable.cpp  rosic_NumberManipulations.h  rosic_Open303.cpp  rosic_Open303.h  rosic_RealFunctions.h
Source/VST3/: .clang-format  normplain.h  o303cids.h  o303controller.cpp  o303factory.cpp  o303pids.h  o303processor.cpp  paramdesc.h  parameter.cpp  parameter.h  version.h
